# SARA-Rover

./: .gitignore  README.md  check_exploration_topics.sh  check_topics.sh  robust_bridge.sh  run_exploration_system_nav2.sh  run_exploration_system_new.sh  send_serial.py
catkin_point_lio_unilidar/src/point_lio_unilidar/launch/: mapping_unilidar_l1_custom_rviz.launch
catkin_point_lio_unilidar/src/point_lio_unilidar/rviz_cfg/: loam_livox.rviz  loam_livox_with_markers.rviz  loam_livox_with_markers.rviz.bak  minimal.rviz  minimal.rviz.bak
exploration_ws/src/autonomous_explorer/: CMakeLists.txt  package.xml
exploration_ws/src/autonomous_explorer/config/: joy_params.yaml  nav2_params.yaml  nav2_params_simple.yaml  navigate_w_replanning_and_recovery.xml
exploration_ws/src/autonomous_explorer/include/: cubic_spline.hpp  dubins_path.hpp  reeds_shepp.hpp
exploration_ws/src/autonomous_explorer/launch/: cmd_vel_mux.py  exploration.py  exploration_nav2.py  exploration_new.py  joy.launch.py  nav2.launch.py
exploration_ws/src/autonomous_explorer/rviz/: exploration.rviz  exploration_nav2.rviz
exploration_ws/src/autonomous_explorer/src/: cmd_vel_mux.cpp  exploration_node_nav2.cpp  exploration_node_new.cpp
